...
                  Reset & replay onboarding
                </ButtonLabel>
              </Button>
              <Button testID="e2e.seed.showActivitiesListGuide" variant="secondary" onPress={handleShowActivitiesListGuide} style={styles.cardAction}>
                <ButtonLabel size="md">Show To-dos list guide</ButtonLabel>
              </Button>
              <Button testID="e2e.seed.showActivityDetailGuide" variant="secondary" onPress={handleShowActivityDetailGuide} style={styles.cardAction}>
                <ButtonLabel size="md">Show To-do detail guide</ButtonLabel>
              </Button>
              {isFlowActive && (
                <Button variant="secondary" onPress={dismissFlow} style={styles.cardAction}>
                  <ButtonLabel size="md">Force dismiss</ButtonLabel>
                </Button>
...
